src/other/mico-2.3.12/test/idl/error/case12.idl

/*
 * Duplicate label in union.
 */

union U switch(long) {
  case 1: long a;
  case 1: char b;
};
